[package]
name = "time_series_utils"
version = "0.1.0"
edition = "2021"
authors = ["eight <official@eightt.net>"]
description = "A library for handling time series data."
license = "AGPL-3.0-or-later"
repository = "https://github.com/eightfx/time_series"
documentation = "https://docs.rs/time_series"
readme = "README.org"
categories = ["data-structures", "scientific-computing", "mathematics", "algorithms"]
keywords = ["time-series", "math", "statistics", "data-analysis", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-impl-ops = "0.2.1"
